Add today exercise api
