# handler/handler.go
@@ -54,5 +54,11 @@ func ApplyHandler(e *echo.Echo, db *sql.DB) {
 	// 홈 - 다음 운동정보
 	e.GET("/api/next-exercise", getUserNextExercise(db))
 
+	// 스톱워치 - 당일 운동 시작, 종료
+	e.POST("/api/exercises/today", completeTodayExercise(db))
+
+	// 홈 - 당일 운동정보
+	e.GET("/api/next-exercise", getTodayExercise(db))
+
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 }
