# models/user_exercise_histories.go
@@ -1,4 +1,4 @@
-// Code generated by SQLBoiler 4.11.0 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
+// Code generated by SQLBoiler 4.8.6 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
 // This file is meant to be re-generated in place and/or deleted at any time.
 
 package models
@@ -14,6 +14,7 @@ import (
 	"time"
 
 	"github.com/friendsofgo/errors"
+	"github.com/volatiletech/null/v8"
 	"github.com/volatiletech/sqlboiler/v4/boil"
 	"github.com/volatiletech/sqlboiler/v4/queries"
 	"github.com/volatiletech/sqlboiler/v4/queries/qm"
@@ -28,29 +29,41 @@ type UserExerciseHistory struct { // ID
 	UserID int64 `boil:"user_id" json:"user_id" toml:"user_id" yaml:"user_id"`
 	// 운동일
 	ExerciseDate time.Time `boil:"exercise_date" json:"exercise_date" toml:"exercise_date" yaml:"exercise_date"`
+	// 운동 시작 시간
+	ExerciseStartedAt time.Time `boil:"exercise_started_at" json:"exercise_started_at" toml:"exercise_started_at" yaml:"exercise_started_at"`
+	// 운동 종료 시간
+	ExerciseEndedAt null.Time `boil:"exercise_ended_at" json:"exercise_ended_at,omitempty" toml:"exercise_ended_at" yaml:"exercise_ended_at,omitempty"`
 
 	R *userExerciseHistoryR `boil:"-" json:"-" toml:"-" yaml:"-"`
 	L userExerciseHistoryL  `boil:"-" json:"-" toml:"-" yaml:"-"`
 }
 
 var UserExerciseHistoryColumns = struct {
-	ID           string
-	UserID       string
-	ExerciseDate string
+	ID                string
+	UserID            string
+	ExerciseDate      string
+	ExerciseStartedAt string
+	ExerciseEndedAt   string
 }{
-	ID:           "id",
-	UserID:       "user_id",
-	ExerciseDate: "exercise_date",
+	ID:                "id",
+	UserID:            "user_id",
+	ExerciseDate:      "exercise_date",
+	ExerciseStartedAt: "exercise_started_at",
+	ExerciseEndedAt:   "exercise_ended_at",
 }
 
 var UserExerciseHistoryTableColumns = struct {
-	ID           string
-	UserID       string
-	ExerciseDate string
+	ID                string
+	UserID            string
+	ExerciseDate      string
+	ExerciseStartedAt string
+	ExerciseEndedAt   string
 }{
-	ID:           "user_exercise_histories.id",
-	UserID:       "user_exercise_histories.user_id",
-	ExerciseDate: "user_exercise_histories.exercise_date",
+	ID:                "user_exercise_histories.id",
+	UserID:            "user_exercise_histories.user_id",
+	ExerciseDate:      "user_exercise_histories.exercise_date",
+	ExerciseStartedAt: "user_exercise_histories.exercise_started_at",
+	ExerciseEndedAt:   "user_exercise_histories.exercise_ended_at",
 }
 
 // Generated where
@@ -76,14 +89,42 @@ func (w whereHelpertime_Time) GTE(x time.Time) qm.QueryMod {
 	return qmhelper.Where(w.field, qmhelper.GTE, x)
 }
 
+type whereHelpernull_Time struct{ field string }
+
+func (w whereHelpernull_Time) EQ(x null.Time) qm.QueryMod {
+	return qmhelper.WhereNullEQ(w.field, false, x)
+}
+func (w whereHelpernull_Time) NEQ(x null.Time) qm.QueryMod {
+	return qmhelper.WhereNullEQ(w.field, true, x)
+}
+func (w whereHelpernull_Time) LT(x null.Time) qm.QueryMod {
+	return qmhelper.Where(w.field, qmhelper.LT, x)
+}
+func (w whereHelpernull_Time) LTE(x null.Time) qm.QueryMod {
+	return qmhelper.Where(w.field, qmhelper.LTE, x)
+}
+func (w whereHelpernull_Time) GT(x null.Time) qm.QueryMod {
+	return qmhelper.Where(w.field, qmhelper.GT, x)
+}
+func (w whereHelpernull_Time) GTE(x null.Time) qm.QueryMod {
+	return qmhelper.Where(w.field, qmhelper.GTE, x)
+}
+
+func (w whereHelpernull_Time) IsNull() qm.QueryMod    { return qmhelper.WhereIsNull(w.field) }
+func (w whereHelpernull_Time) IsNotNull() qm.QueryMod { return qmhelper.WhereIsNotNull(w.field) }
+
 var UserExerciseHistoryWhere = struct {
-	ID           whereHelperint64
-	UserID       whereHelperint64
-	ExerciseDate whereHelpertime_Time
+	ID                whereHelperint64
+	UserID            whereHelperint64
+	ExerciseDate      whereHelpertime_Time
+	ExerciseStartedAt whereHelpertime_Time
+	ExerciseEndedAt   whereHelpernull_Time
 }{
-	ID:           whereHelperint64{field: "`user_exercise_histories`.`id`"},
-	UserID:       whereHelperint64{field: "`user_exercise_histories`.`user_id`"},
-	ExerciseDate: whereHelpertime_Time{field: "`user_exercise_histories`.`exercise_date`"},
+	ID:                whereHelperint64{field: "`user_exercise_histories`.`id`"},
+	UserID:            whereHelperint64{field: "`user_exercise_histories`.`user_id`"},
+	ExerciseDate:      whereHelpertime_Time{field: "`user_exercise_histories`.`exercise_date`"},
+	ExerciseStartedAt: whereHelpertime_Time{field: "`user_exercise_histories`.`exercise_started_at`"},
+	ExerciseEndedAt:   whereHelpernull_Time{field: "`user_exercise_histories`.`exercise_ended_at`"},
 }
 
 // UserExerciseHistoryRels is where relationship names are stored.
@@ -103,8 +144,8 @@ func (*userExerciseHistoryR) NewStruct() *userExerciseHistoryR {
 type userExerciseHistoryL struct{}
 
 var (
-	userExerciseHistoryAllColumns            = []string{"id", "user_id", "exercise_date"}
-	userExerciseHistoryColumnsWithoutDefault = []string{"user_id", "exercise_date"}
+	userExerciseHistoryAllColumns            = []string{"id", "user_id", "exercise_date", "exercise_started_at", "exercise_ended_at"}
+	userExerciseHistoryColumnsWithoutDefault = []string{"user_id", "exercise_date", "exercise_started_at", "exercise_ended_at"}
 	userExerciseHistoryColumnsWithDefault    = []string{"id"}
 	userExerciseHistoryPrimaryKeyColumns     = []string{"id"}
 	userExerciseHistoryGeneratedColumns      = []string{}
@@ -324,7 +365,7 @@ func (q userExerciseHistoryQuery) One(ctx context.Context, exec boil.ContextExec
 
 	err := q.Bind(ctx, exec, o)
 	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
+		if errors.Cause(err) == sql.ErrNoRows {
 			return nil, sql.ErrNoRows
 		}
 		return nil, errors.Wrap(err, "models: failed to execute a one query for user_exercise_histories")
@@ -391,12 +432,7 @@ func (q userExerciseHistoryQuery) Exists(ctx context.Context, exec boil.ContextE
 // UserExerciseHistories retrieves all the records using an executor.
 func UserExerciseHistories(mods ...qm.QueryMod) userExerciseHistoryQuery {
 	mods = append(mods, qm.From("`user_exercise_histories`"))
-	q := NewQuery(mods...)
-	if len(queries.GetSelect(q)) == 0 {
-		queries.SetSelect(q, []string{"`user_exercise_histories`.*"})
-	}
-
-	return userExerciseHistoryQuery{q}
+	return userExerciseHistoryQuery{NewQuery(mods...)}
 }
 
 // FindUserExerciseHistory retrieves a single record by ID with an executor.
@@ -416,7 +452,7 @@ func FindUserExerciseHistory(ctx context.Context, exec boil.ContextExecutor, iD 
 
 	err := q.Bind(ctx, exec, userExerciseHistoryObj)
 	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
+		if errors.Cause(err) == sql.ErrNoRows {
 			return nil, sql.ErrNoRows
 		}
 		return nil, errors.Wrap(err, "models: unable to select from user_exercise_histories")
